tests/transpiler/x/hs/cross_join_triple.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/cross_join_triple.hs:15:39: error:
    • Couldn't match type ‘Bool’ with ‘[Char]’
      Expected: String
        Actual: Bool
    • In the ‘b’ field of a record
      In the expression: GenType1 {n = n, l = l, b = b}
      In the expression:
        [GenType1 {n = n, l = l, b = b} |
           n <- nums, l <- letters, b <- bools]
   |
15 | combos = [GenType1 {n = n, l = l, b = b} | n <- nums, l <- letters, b <- bools]
   |                                       ^

/workspace/mochi/tests/transpiler/x/hs/cross_join_triple.hs:25:9: error:
    • Couldn't match type ‘[]’ with ‘IO’
      Expected: IO Char
        Actual: [Char]
    • In a stmt of a 'do' block:
        putStrLn show c.n ++ " " ++ show c.l ++ " " ++ show c.b
      In the expression:
        do putStrLn show c.n ++ " " ++ show c.l ++ " " ++ show c.b
      In the first argument of ‘mapM_’, namely
        ‘(\ c
            -> do putStrLn show c.n ++ " " ++ show c.l ++ " " ++ show c.b)’
   |
25 |         putStrLn show c.n ++ " " ++ show c.l ++ " " ++ show c.b
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/cross_join_triple.hs:25:18: error:
    • Couldn't match type: a0 -> String
                     with: [Char]
      Expected: String
        Actual: a0 -> String
    • Probable cause: ‘show’ is applied to too few arguments
      In the first argument of ‘putStrLn’, namely ‘show’
      In the first argument of ‘(++)’, namely ‘putStrLn show c.n’
      In a stmt of a 'do' block:
        putStrLn show c.n ++ " " ++ show c.l ++ " " ++ show c.b
   |
25 |         putStrLn show c.n ++ " " ++ show c.l ++ " " ++ show c.b
   |                  ^^^^
